# agent-kg

./: Cahier_des_charges (1).md  agent_kg.yml  ms-agent-framework.md  pyproject.toml  test.ipynb
docs/design/: coreference_resolution.md  dev_methodology.md  drift_management.md  emergent_ontology.md  entity_resolution.md  flow_chart.md  ontology_type_splitting.md  reification_and_event_semantics.md  relation_granularity.md  relation_specialization.md  source_redundancy_and_independence.md  todos.md  tokenizers.md
old/: _graph_introspec.ipynb
old/graph/: __init__.py
old/graph/docs/: entity_resolution.txt
old/graph/utils/: __init__.py  clustering.py  event_retriever.py  neo4j_uploader.py
poc_1/: _graph.ipynb  graph_base.py
poc_1/graph/: graph_converter.py
poc_1/graph/utils/: event_filter.py
src/agent_kg/: __init__.py  config.py
src/agent_kg/agents/: arbiter_agent.py  prompts.py  qc_agent.py  relation_agent.py  role_agent.py  validator.py
src/agent_kg/executors/: clustering.py  context.py  entity_resolution.py
src/agent_kg/models/: base.py  graph.py  ontology.py
src/agent_kg/utils/: chunking.py  embeddings.py  sanitize.py
src/agent_kg/validation/: rules.py
src/agent_kg/workflow/: pipeline.py
